--- a/css/popup.css
+++ b/css/popup.css
@@ -159,3 +159,18 @@ a.layui-layer-btn1{
 	background-color: #fff!important;
 	border: 1px solid #333;
 }
+.new-box{text-align: center;margin-top: 2rem;}
+.new-box.mt2{margin-top: 5rem;}
+.new-box input{width: 20rem;height: 2.6rem;border: 0;background-color: #f5f4f7;box-sizing: border-box;padding:0 1rem;}
+.basic4 {
+	float: left;
+    width: 20rem;
+    height: 3rem;
+    line-height: 3rem;
+    background-color: #f5f5f5;
+    border: 0;
+    box-sizing: border-box;
+    padding: 0 20px;
+    background-position:top center ;
+}
+.basic4 select{width: 100%;height: 100%;}
