--- a/css/popup.css
+++ b/css/popup.css
@@ -159,18 +159,29 @@ a.layui-layer-btn1{
 	background-color: #fff!important;
 	border: 1px solid #333;
 }
-.new-box{text-align: center;margin-top: 2rem;}
+.new-box{text-align: center;margin-top: 1rem;}
 .new-box.mt2{margin-top: 5rem;}
-.new-box input{width: 20rem;height: 2.6rem;border: 0;background-color: #f5f4f7;box-sizing: border-box;padding:0 1rem;}
-.basic4 {
+.new-box input{width: 20rem;height: 2.6rem;box-sizing: border-box;padding:0 1rem;margin-left: 10px;}
+.new-box.mt2 input{background-color: #f5f4f7;border: 0;}
+#basic4,#basic5,#more4,#more6,#more8,.more-box {
 	float: left;
     width: 20rem;
     height: 3rem;
     line-height: 3rem;
-    background-color: #f5f5f5;
-    border: 0;
-    box-sizing: border-box;
-    padding: 0 20px;
-    background-position:top center ;
+ 
 }
-.basic4 select{width: 100%;height: 100%;}
+#basic4 select,#basic5 select,#more4 select,#more6 select,#more8 select,.more-box select{border: 0;width: 100%;height: 100%; box-sizing: border-box; padding: 0 20px;background-color: #f5f5f5;}
+.details{padding: 2rem 0;width: 80rem;}
+.jc-text{float: left;margin-left: 5rem;width: 40rem;}
+.jc-text .float{overflow: hidden;}
+.jc-text .float p{float: left;width: 50%;height: 2.6rem;color: #666;}
+.jc-text p.pblock{height: 2.4rem;color: #666;}
+.jc-text p span{color: #333;margin-left: 1rem;}
+.more-zl{overflow: hidden;margin: 0 50px;}
+.more-zl p{float: left;width: 33.33%;margin-bottom: 1rem;}
+.more-zl p span:first-child{color: #666;width: 5rem;font-size: 0.9rem; text-align:justify;text-align-last:justify;line-height: 0;display:inline-block;}
+.more-zl p span:last-child{width: calc(100% - 6rem);margin-left: 1rem;}
+.more-zl .fs{font-size: 0.9rem}
+.sming{ overflow: hidden;width: 100%;}
+.sming span:first-child{float: left; color: #666;width: 5rem; text-align:justify;text-align-last:justify;display:inline-block;}
+.sming span:last-child{float: right;width: calc(100% - 6rem);margin-left: 1rem;}
