--- a/css/common/common.css
+++ b/css/common/common.css
@@ -74,3 +74,30 @@ table.dataTable thead td,table.dataTable tbody td{
     color: #333333;
     font-weight: bold;
 }
+input[type=checkbox] {
+    position: relative;
+    width: 1rem;
+    height: 1rem;
+}
+input[type=checkbox]::before{
+	content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+	height: 1rem;
+	width: 1rem;
+	background-color: #fff;
+	border: 1px solid #8490ff;
+	border-radius:5px ;
+}
+input[type=checkbox]:checked::before{
+	content: '';
+	position: absolute;
+    top: 0;
+    left: 0;
+	height: 1rem;
+	width: 1rem;
+	color: #fff;
+	background-image: url(../../img/basicData/active.png);
+	background-size: 100% 100%;
+}
