--- a/css/popup.css
+++ b/css/popup.css
@@ -170,7 +170,7 @@ a.layui-layer-btn1{
     line-height: 3rem;
  
 }
-#basic4 select,#basic5 select,#more4 select,#more6 select,#more8 select,.more-box select{border: 0;width: 100%;height: 100%; box-sizing: border-box; padding: 0 20px;background-color: #f5f5f5;}
+#basic4 select,#basic5 select,#more4 select,#more6 select,#more8 select,.more-box select,.allselect{border: 0;width: 100%;height: 100%; box-sizing: border-box; padding: 0 20px;background-color: #f5f5f5;}
 .details{padding: 2rem 0;width: 80rem;display: none;}
 .jc-text{float: left;margin-left: 5rem;width: 40rem;}
 .jc-text .float{overflow: hidden;}
