--- a/css/common/common.css
+++ b/css/common/common.css
@@ -2,11 +2,16 @@
     font-size: 16px;
     outline: none;
 }
+@media screen and (max-width:1280px ) {
+    *{
+        font-size: 12px;
+    }
+}
 li{
     list-style: none;
 }
 body{
-    overflow: hidden;
+
 }
 input,button,select{
 
