--- a/css/common/common.css
+++ b/css/common/common.css
@@ -7,6 +7,11 @@
         font-size: 12px;
     }
 }
+@media screen and (max-width:800px ) {
+    *{
+        font-size: 10px;
+    }
+}
 li{
     list-style: none;
 }
